09Sep01=======================================================================
1. Add show/dxstats command
2. Add show/hfstats command
3. Add show/vhfstats command
4. Add show/hftable command
5. Add show/vhftable command (BE WARNED, the first time you run one of these
commands it will take some considerable time to complete, thereafter it will
be a lot faster).
08Sep01=======================================================================
1. Update the sgml docs on filtering a bit.
06Sep01=======================================================================
1. prevent nodes appearing as users from incoming PC16s
2. Change ping averaging to be like TCP and become a smoothed RTT.
3. Make all the Prompts in stat/* like output appear in alphebetical order
4. Fix problem with 17m spots not appearing in sh/dx
5. pump up eph dups everytime they re-occur and increase life to 180 secs
04Sep01=======================================================================
1. add delete/user command
03Sep01=======================================================================
1. make spot dups look back 5 mins.
2. strip the top off each character in any text field of a Spot for duping.
3. Try to make the routing tables more accurate for users that login to
more than one node.
4. Make PC50s come out in one heap on all channels every 14 mins, instead of
on the 14th minute in the connection time for each channel. This should 
reduce (slightly) the dups that are dumped.
5. Speed up input queue processing (a lot).
6. make set/isolate and acc/route mutually exclusive (and issue appropriate
error messages) and fix set/iso on PC18 input.
7. Improve stat/route_node and stat/route_user for diagnostics.
8. strip top bit of comments in ann/spots.
9. fix the announce filtering problem.
10. Fix the double announcement of node disconnections?
01Sep01=======================================================================
1. Change build number calc (hopefully for the last time)