@@ -77,6 +77,7 @@ package DXM;
 				e24 => 'Sorry, Internet access is not enabled',
 				e25 => 'Sorry the value must be between $_[0] and $_[1]',
 				e26 => 'Too many concurrent errors, you are being disconnected',
+				e27 => '$_[0] not a numeric or a callsign prefix', 
 
 				echoon => 'Echoing enabled',
 				echooff => 'Echoing disabled',
